--- a/templates/report.erb
+++ b/templates/report.erb
@@ -102,7 +102,7 @@ button.toggle_error {
         </div>
       </div>
 
-      <!-- TODO: make this only appear if os[:family] is defined -->
+      <% if defined?(os) && defined?(os[:family]) %>
       <div class="col-md-4">
       <div class="panel panel-default">
         <div class="panel-heading">OS Description</div>
@@ -119,8 +119,7 @@ button.toggle_error {
           </div>
         </div>
       </div>
-
-
+      <% end %>
       <div class="col-md-4">
       <div class="panel panel-default">
         <div class="panel-heading">Filter rules by their result</div>
