--- a/templates/report.erb
+++ b/templates/report.erb
@@ -153,7 +153,7 @@ button.toggle_error {
                 <div>
                       <div class="panel <%= example.klass('panel-') %>">
                         <div class="panel-heading">
-                        <h3 class="panel-title pull-left"> <%= example.example_title.gsub!(/^#{@title} /,'') %></h3>
+                        <h3 class="panel-title pull-left"> <%= example.example_title.gsub(/^#{Regexp.escape(@title)} /,'') %> </h3>
                           <% if example.has_screenrecord? %>
                             <a href="#example_<%= i+1 %>" class="btn btn-xs btn-default spacer pull-right" onclick="toggler('screenrecord_<%= i+1 %>');">Screen Record</a>
                           <% end %>
